Canvas and collection items are synced when removing from each screen

--- a/client/src/app/collection/components/collection-view/collection-view.component.css
+++ b/client/src/app/collection/components/collection-view/collection-view.component.css
@@ -9,7 +9,7 @@
   transform: translate(-50%, -50%)
 }
 
-.portfolio-item-img, .colleciton-image {
+.portfolio-item-img, .collection-image, .workspace-image {
   user-drag: none;
   user-select: none;
   -moz-user-select: none;
