changed artworks to artwork

--- a/client/src/app/collection/components/collection-view/collection-view.component.html
+++ b/client/src/app/collection/components/collection-view/collection-view.component.html
@@ -89,9 +89,9 @@
     </div>
     <div class="col-lg-7">
       <h2 class="mt-2 mb-0 text-center">
-        {{'collection.explore_artworks' | translate}}
+        {{'collection.explore_artwork' | translate}}
       </h2>
-      <p class="text-center porject-board-help-block mb-1">{{'collection.explore_artworks_hint' | translate}}</p>
+      <p class="text-center porject-board-help-block mb-1">{{'collection.explore_artwork_hint' | translate}}</p>
 
       <p *ngIf="loadingFilters">{{'collection.loading_filters' | translate}}...
         <i class="fa fa-spinner fa-spin fa-2x"></i>
