Added beta login

--- a/client/src/app/core/components/navbar/navbar.component.html
+++ b/client/src/app/core/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar-light app-navbar bg-light fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/"  (click)='close()'>
+    <a class="navbar-brand" routerLink="/beta"  (click)='close()'>
       <img src="assets/images/artifish_logo_no_color.png" height="35px" alt="Artifish">
     </a>
     <button class="navbar-toggler" type="button" (click)="toggleCollapse()" aria-expanded="false" aria-label="Toggle navigation">
