--- a/client/src/app/collection/components/collection-view/collection-view.component.html
+++ b/client/src/app/collection/components/collection-view/collection-view.component.html
@@ -126,6 +126,12 @@
               </div>
             </form>
 
+            <!-- Price filter -->
+            <label>Price</label>
+            <div class="price-range d-inline-block ml-2">
+              <nouislider [connect]="true" [min]="0" [tooltips]="true"
+                [max]="maxPrice" [step]="10" [(ngModel)]="priceRange" (change)="onPriceRangeChanged()"></nouislider>
+            </div>
           </div>
 
           <div class="mb-3 tag-chooser">
