--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -7,6 +7,7 @@
 @import "~bootstrap-social/bootstrap-social.css";
 @import "~intro.js/introjs.css";
 @import "~roboto-fontface/css/roboto/roboto-fontface.css";
+@import "~nouislider/distribute/nouislider.min.css";
 body {
   padding-top: 80px;
   padding-bottom: 10px;
