--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -31,7 +31,7 @@ body {
   background-image: url('/assets/images/home-background.png');
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-position-y: 70px;
 }
 
