--- a/client/src/app/core/components/home/home.component.css
+++ b/client/src/app/core/components/home/home.component.css
@@ -23,3 +23,52 @@
 .btn-start:hover {
   background-color: #6a28fa;
 }
+
+.how-it-works-anchor {
+  height: 80px;
+  margin-top: 120px;
+  display: block;
+}
+
+.how-it-works-section {
+  margin-top: 100px;
+}
+
+.how-it-works-section img {
+  width: 80px;
+}
+
+.how-it-works-section p.title {
+  font-weight: bold;
+  font-size: 18px;
+  width: 50%;
+  margin: 0 auto;
+}
+
+.how-it-works-section .col-md-6.left-col {
+  padding-left: 150px;
+}
+
+.how-it-works-section .col-md-6.right-col {
+  padding-right: 150px;
+}
+
+.try-section {
+  background-color: #f4f4f4;
+  margin: 0 -50px;
+}
+
+.video-wrapper {
+  background-color: #f3f3f3;
+  -webkit-box-shadow: 0 4px 16px 3px #b1b1b1;
+  -moz-box-shadow: 0 4px 16px 3px #b1b1b1;
+  box-shadow: 0 4px 16px 3px #b1b1b1;
+  display: inline-block;
+  height: 368px;
+}
+
+.how-it-works-video {
+  height: 450px;
+  position: relative;
+  display: block;
+}
